--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -1,9 +1,17 @@
-name: sample-react
+name: sorting-game-react
+region: ams
 services:
-- build_command: yarn build
-  environment_slug: node-js
+- dockerfile_path: Dockerfile
+  envs:
+  - key: DANGEROUSLY_DISABLE_HOST_CHECK
+    scope: RUN_AND_BUILD_TIME
+    value: "true"
   github:
-    branch: main
-    deploy_on_push: true
-    repo: digitalocean/sample-react
-  name: sample-react
+    branch: master
+    repo: patello/sorting-game-react
+  http_port: 3000
+  instance_count: 1
+  instance_size_slug: basic-xxs
+  name: sorting-game-react
+  routes:
+  - path: /
